# kixdns

./: .clippy.toml  .gitignore  CHANGELOG.md  COMMIT_MESSAGES_TRANSLATION.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASING.md  clippy_full_output.txt  clippy_output.txt  clippy_simple.txt  test_txt_config.json
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
benches/: geosite_bench.rs
config/: pipeline.json  pipeline_fast.json  pipeline_with_cache_refresh.json  test_geosite_geoip.json
docs/: PREFETCH_INTEGRATION.md  PREFETCH_QUICKSTART.md
scripts/: create-release.sh
src/: advanced_rule.rs  cache.rs  config.rs  engine.rs  error_utils.rs  geoip.rs  geoip_converter.rs  geosite.rs  integration_tests_new_matchers.rs  lib.rs  lock.rs  main.rs  matcher.rs  prefetch.rs  proto_utils.rs  socket_utils.rs  watcher.rs
src/engine/: concurrency.rs  core.rs  execution.rs  matcher_adapter.rs  mod.rs  phases.rs  pipeline.rs  refresh.rs  response.rs  rules.rs  transport.rs  types.rs  upstream.rs  utils.rs
src/matcher/: advanced_rule.rs  geoip.rs  geoip_converter.rs  geosite.rs  mod.rs
tests/: check_gfw_tag.rs  debug_geoip_test.rs  debug_geosite_test.rs  geo_integration_test.rs  geosite_hot_reload_test.rs  geosite_integration_test.rs  lazy_geoip_test.rs  performance_stress_test.rs  pipeline_selector_geosite_test.rs  prefetch_test.rs  regression_integration_test.rs  simulation_test.rs  test_background_refresh_non_blocking.rs  test_background_refresh_protocol_fix.rs  test_background_refresh_retry.rs  test_cache_refresh_bypass_rules.rs  test_cache_refresh_flow.rs  test_cache_refresh_integration.rs  test_cache_refresh_triggering.rs  test_complete_refresh_scenario.rs  test_concurrent_cancellation.rs  test_default_upstream_concurrent.rs  test_geosite_simple.rs  test_geosite_tags.rs  test_github_specific.rs  test_helper_functions_integration.rs  test_max_ttl_refresh.rs  test_parse_response_quick.rs  test_protocol_storage.rs  test_rcode_handling.rs  test_real_refresh_issue.rs  test_refresh_trigger_debug.rs  test_suffix_self_match.rs  test_ttl_calculation.rs  test_ttl_extraction_min_max.rs  test_upstream_field_analysis.rs  v2ray_geosite_test.rs
tools/: README.md  check_geosite_tags.rs  config_editor.html  diagnose.html  test_vue.html
