[package]
name = "kixdns"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "signal", "sync"] }
hickory-proto = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arc-swap = "1.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
notify = "6"
clap = { version = "4.5", features = ["derive"] }
dashmap = "5"
ipnet = "2"
anyhow = "1"
bytes = "1"
regex = "1"
num_cpus = "1.16"
moka = { version = "0.12", features = ["sync"] }
socket2 = "0.5"
libc = "0.2"
rustc-hash = "2.1.1"
smallvec = "1.13"
maxminddb = "0.24"
maxminddb-writer = "0.1"
futures = "0.3"
[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Cross-compilation for Linux x86_64
[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"

# Cross-compilation for Linux ARM64 (aarch64)
[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

# Cross-compilation for Linux musl (static binary)
[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
strip = true
